k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-book-service
spec:
  selector:
    app: go-book
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: LoadBalancer
